# Converter-HEX-BIN

./: .gitignore  CMakeLists.txt  README.md
include/: file_processing.h  tools.h
src/: file_processing.c  main.c
src/tools/: conversion_to_bin.c  conversion_to_hex.c  conversion_to_txt.c  documentation.c  help_documentation.c
tests/: unit_tests.c
